--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,27 @@ footer {
     background-color: #333;
     color: white;
 }
+
+#project-details {
+    padding: 2em;
+    text-align: left; /* Align text to the left */
+}
+
+#project-details h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+
+.image-gallery {
+    display: flex;          /* Use flexbox for horizontal arrangement */
+    flex-wrap: wrap;       /* Allow images to wrap to the next line */
+    justify-content: center; /* Center images horizontally */
+    margin-bottom: 1em;
+}
+
+.image-gallery img {
+    max-width: 45%;          /* Adjust as needed */
+    height: auto;
+    border-radius: 5px;
+    margin: 0.25em;        /* Add some spacing around the images */
+}
